# baa

./: .gitignore  Cargo.toml  LICENSE  Readme.md
.github/workflows/: test.yml
proptest-regressions/: arithmetic.txt
proptest-regressions/bv/: arithmetic.txt  borrowed.txt
proptest-regressions/bv/io/: strings.txt
proptest-regressions/io/: bigint.txt  bytes.txt  strings.txt
src/: arithmetic.rs  container.rs  lib.rs  ops.rs  value.rs
src/array/: borrowed.rs  indexed.rs  mod.rs  ops.rs  owned.rs
src/bv/: arithmetic.rs  borrowed.rs  indexed.rs  mod.rs  ops.rs  owned.rs
src/bv/io/: bigint.rs  bytes.rs  strings.rs
src/io/: bigint.rs  bitvec.rs  bytes.rs  fraction.rs  mod.rs  strings.rs
src/value/: borrowed.rs  indexed.rs  mod.rs  owned.rs
tests/: arrays.rs  value.proptest-regressions  value.rs
