[package]
name = "baa"
version = "0.2.0"
edition = "2021"
authors = ["Kevin Laeufer <laeufer@berkeley.edu>"]
description = "BitVector and Array Arithmetic"
repository = "https://github.com/ekiwi/baa"
license = "BSD-3-Clause"
include = ["Cargo.toml", "LICENSE", "src/", "Readme.md"]
keywords = ["bitvector", "array", "arithmetic"]
readme = "Readme.md"
# we require the `div_ceil` method on integers
rust-version = "1.73.0"

[dependencies]
bitvec = { version = "1.0", optional = true, features = ["std", "alloc"] }
num-bigint = { version = "0.4.5", optional = true}
smallvec = { version = "1.13.2", features = ["const_new", "union"] }
thiserror = "1.0.60"

[dev-dependencies]
proptest = "1.4.0"

[features]
default = []
bigint = ["dep:num-bigint"]
bitvec1 = ["dep:bitvec"]
