[package]
name = "baa"
version = "0.12.2"
edition = "2021"
authors = ["Kevin Laeufer <laeufer@cornell.edu>"]
description = "BitVector and Array Arithmetic"
repository = "https://github.com/ekiwi/baa"
license = "BSD-3-Clause"
include = ["Cargo.toml", "LICENSE", "src/", "Readme.md", "tests/"]
keywords = ["bitvector", "array", "arithmetic"]
readme = "Readme.md"
# we require the `div_ceil` method on integers
rust-version = "1.73.0"

[dependencies]
# core dependency, used for owned bitvector type
smallvec = { version = "1.13.2", features = ["const_new", "union"] }
# optional dependencies for crate interop
fraction = { version = "0.11", optional = true }
num-bigint = { version = "0.4", optional = true}
serde = { version = "1.0", features = ["derive"], optional = true }


[dev-dependencies]
proptest = "1.4.0"
num-bigint = "0.4"

[features]
default = []
bigint = ["dep:num-bigint"]
serde1 = ["dep:serde", "smallvec/serde"]
fraction1 = ["dep:fraction"]
